arrow icon align fixed and change switch color

--- a/src/containers/Assets/index.scss
+++ b/src/containers/Assets/index.scss
@@ -247,6 +247,5 @@
 }
 
 .asset-ibc-btn {
-  font-size: 16px;
   margin-left: 4px;
 }
